@@ -13,7 +13,7 @@ soundgen(repeatBout = 1, nSyl = 1, sylLen = 300, pauseLen = 200,
   nonlinBalance = 0, nonlinDep = 50, nonlinRandomWalk = NULL,
   jitterLen = 1, jitterDep = 1, vibratoFreq = 5, vibratoDep = 0,
   shimmerDep = 0, shimmerLen = 1, attackLen = 50, rolloff = -9,
-  rolloffOct = -3, rolloffKHz = -3, rolloffParab = 0,
+  rolloffOct = 0, rolloffKHz = -3, rolloffParab = 0,
   rolloffParabHarm = 3, lipRad = 6, noseRad = 4,
   mouthOpenThres = 0, formants = c(860, 1430, 2900), formantDep = 1,
   formantDepStoch = 20, formantWidth = 1, vocalTract = NA,
